@@ -3056,6 +3056,8 @@ that will be sent to the tracker. The user-agent is a good way to identify your 
 		int auto_manage_startup;
 
 		bool rate_limit_ip_overhead;
+
+		bool drop_skipped_requests;
 	};
 
 ``user_agent`` this is the client identification to the tracker.
@@ -3341,6 +3343,15 @@ have a fair chance to start downloading.
 
 If ``rate_limit_ip_overhead`` is set to true, the estimated TCP/IP overhead is
 drained from the rate limiters, to avoid exceeding the limits with the total traffic
+
+If ``drop_skipped_requests`` is set to true (it defaults to false), piece
+requests that have been skipped enough times when piece messages
+are received, will be considered lost. Requests are considered skipped
+when the returned piece messages are re-ordered compared to the order
+of the requests. This was an attempt to get out of dead-locks caused by
+BitComet peers silently ignoring some requests. It may cause problems
+at high rates, and high level of reordering in the uploading peer, that's
+why it's disabled by default.
 
 
 pe_settings
